--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "string.h": "c",
         "uteis.h": "c",
         "stdio.h": "c",
-        "indices.h": "c"
+        "indices.h": "c",
+        "caracteristicas.h": "c"
     }
 }
